test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:latest
        ports:
        - containerPort: 80
        env:
        - name: GITLAB_ROOT_PASSWORD
          value: "MonMotDePasseSuperSecret"
        volumeMounts:
        - mountPath: /var/opt/gitlab
          name: gitlab-storage
      volumes:
      - name: gitlab-storage
        persistentVolumeClaim:
          claimName: gitlab-pvc
